update HabrCareerParse class (add page iteration) [#285210]